--- a/rate.html
+++ b/rate.html
@@ -74,9 +74,10 @@
             position: relative; aspect-ratio: 1179 / 1572; overflow: hidden; border-radius: 0.375rem; /* rounded-md */
             border: 1px solid #e5e7eb; /* border-gray-200 */
             cursor: grab; /* Add grab cursor for draggable items */
+            display: flex; align-items: center; justify-content: center; background-color: #f9fafb;
         }
         .preview-item:active { cursor: grabbing; } /* Change cursor while dragging */
-        .preview-item img { display: block; width: 100%; height: 100%; object-fit: cover; }
+        .preview-item img { display: block; max-width: 100%; max-height: 100%; object-fit: contain; }
         .preview-item .remove-btn { position: absolute; top: 2px; right: 2px; background-color: rgba(0,0,0,0.6); color: white; border: none; border-radius: 50%; width: 1.25rem; height: 1.25rem; font-size: 0.75rem; line-height: 1; cursor: pointer; display: flex; align-items: center; justify-content: center; padding: 0; z-index: 10; }
         .preview-item .remove-btn:hover { background-color: rgba(239, 68, 68, 0.8); /* hover:bg-red-500 */ }
         /* Style for "Set Cover" button */
@@ -570,6 +571,9 @@
 
         // --- Image Handling (Upload, Crop, Sort, Delete) ---
         const MAX_IMAGES = 5;       // Maximum number of images allowed
+        const MAX_IMAGE_LONG_EDGE = 1280; // Target long edge size for uploads (roughly fits mobile screens)
+        const MIN_CROP_BOX_SIZE = 180;    // Prevent crop box from collapsing into a point
+        const OUTPUT_IMAGE_QUALITY = 0.85; // JPEG quality for uploads
         let filesToProcess = [];    // Array of files selected by user, waiting for cropping/upload
         let currentFileIndex = 0;   // Index of the file currently being processed
 
@@ -699,10 +703,17 @@
                 // Initialize or reinitialize Cropper.js
                 if (cropper) cropper.destroy();
                 cropper = new Cropper(cropperImage, {
-                    aspectRatio: 1179 / 1572, // Set aspect ratio for consistency
                     viewMode: 1, // Restrict crop box to canvas
+                    dragMode: 'move', // Prevent accidental tiny crop boxes
                     autoCropArea: 0.9, // Initial crop area size
                     background: false, // Hide grid background
+                    movable: true,
+                    cropBoxMovable: true,
+                    cropBoxResizable: true,
+                    minCropBoxWidth: MIN_CROP_BOX_SIZE,
+                    minCropBoxHeight: MIN_CROP_BOX_SIZE,
+                    toggleDragModeOnDblclick: false,
+                    responsive: true,
                 });
                 // Update status message
                 cropperStatus.textContent = i18next.t('ratePage.processingImage', { current: currentFileIndex + 1, total: filesToProcess.length });
@@ -724,14 +735,40 @@
             cropperStatus.textContent = i18next.t('ratePage.croppingAndUploading', { current: currentFileIndex + 1 });
             const originalFileName = filesToProcess[currentFileIndex].name;
 
-            // Get cropped canvas data as a Blob (JPEG format, 90% quality)
-            const canvas = cropper.getCroppedCanvas({
-                width: 600, // Standard width for uploaded images
-                height: 800, // Standard height based on aspect ratio
+            // Get cropped canvas data and downscale/compress for mobile-friendly storage
+            const baseCanvas = cropper.getCroppedCanvas({
+                fillColor: '#ffffff',
+                imageSmoothingEnabled: true,
                 imageSmoothingQuality: 'high',
             });
 
-            canvas.toBlob(async (blob) => {
+            if (!baseCanvas) {
+                cropperStatus.textContent = i18next.t('ratePage.cropFailed');
+                return;
+            }
+
+            let outputCanvas = baseCanvas;
+            const originalWidth = baseCanvas.width;
+            const originalHeight = baseCanvas.height;
+            const longestEdge = Math.max(originalWidth, originalHeight);
+
+            if (longestEdge > MAX_IMAGE_LONG_EDGE) {
+                const scale = MAX_IMAGE_LONG_EDGE / longestEdge;
+                const targetWidth = Math.round(originalWidth * scale);
+                const targetHeight = Math.round(originalHeight * scale);
+                const resizedCanvas = document.createElement('canvas');
+                resizedCanvas.width = targetWidth;
+                resizedCanvas.height = targetHeight;
+                const ctx = resizedCanvas.getContext('2d');
+                if (ctx) {
+                    ctx.imageSmoothingEnabled = true;
+                    ctx.imageSmoothingQuality = 'high';
+                    ctx.drawImage(baseCanvas, 0, 0, targetWidth, targetHeight);
+                    outputCanvas = resizedCanvas;
+                }
+            }
+
+            outputCanvas.toBlob(async (blob) => {
                 if (!blob) { // Handle blob creation failure
                     cropperStatus.textContent = i18next.t('ratePage.cropFailed');
                     return;
@@ -765,7 +802,7 @@
                     cropperStatus.textContent = i18next.t('ratePage.uploadFailed', { msg: e.message });
                     // Don't proceed to next file on error, let user retry or cancel
                 }
-            }, 'image/jpeg', 0.9); // Output as JPEG with 90% quality
+            }, 'image/jpeg', OUTPUT_IMAGE_QUALITY); // Output as JPEG with tuned quality
         }
 
         // Cancels the cropping process and closes the modal
